--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2014-05-20 Julien Coloos <julien.coloos [at] gmail [dot] com>
+
+	* v0.2-1
+	Removed unnecessary dependency: psmisc
+	Added configurable timeout to unlock devices before automatic poweroff
+
+
 2014-05-19 Julien Coloos <julien.coloos [at] gmail [dot] com>
 
 	* v0.1-1
