Drop 'dsa' and add 'ed25519' private key support
Update README: dropbearconvert requires OpenSSH keys in PEM format.

Changed installation script to rely on variables, especially the list of
handled private key types, to that it automatically packages expected
private keys, instead of having to explicitely name/package them.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,14 @@
+2020-07-14 Julien Coloos <julien.coloos [at] gmail [dot] com>
+
+        * v0.7-1
+        Dropped 'dsa' private key support; added 'ed25519' private key support
+
+
 2018-03-13 Julien Coloos <julien.coloos [at] gmail [dot] com>
 
         * v0.6-1
         Dropped '-m' option when calling dropbear (latest ArchLinux version does not handle it)
+
 
 2017-06-25 Julien Coloos <julien.coloos [at] gmail [dot] com>
 
