--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2021-11-12 Julien Coloos <julien.coloos [at] gmail [dot] com>
+
+        * v0.10-1
+        Option to use login shell instead of cryptsetup script
+        Re-enable Wake-on-LAN on network device
+
+
+2021-11-12 Julien Coloos <julien.coloos [at] gmail [dot] com>
+
+        * v0.9-2
+        Use SHA256 checksums instead of MD5
+
+
 2021-10-24 Julien Coloos <julien.coloos [at] gmail [dot] com>
 
         * v0.9-1
